--- a/public/partialviews/permission/group.html
+++ b/public/partialviews/permission/group.html
@@ -26,7 +26,7 @@
 								<h4>2 Edit group</h4>
 							</li>
 							<li class="step grid-item size1of4 nnext" id="newgroup-step-3">
-								<h4>3 Add Role</h4>
+								<h4>3 Add Permission</h4>
 							</li>
 							<li class="step grid-item size1of4 nnext" id="newgroup-step-4">
 								<h4>4 Add Colleagues</h4>
@@ -70,7 +70,7 @@
 										<tr data-ng-repeat="item in newGroup.addedDepts">
 											<td>
 												<a>
-													<span class="glyphicon glyphicon-minus" ng-click="minus($index)"></span>
+													<span class="glyphicon glyphicon-minus" ng-click="minusDept($index)"></span>
 												</a>
 											</td>
 											<td>
@@ -87,12 +87,68 @@
 						</div>
 					</div>
 					<div style="margin-top: 20px; height: 400px; display:none" id="step2Container">
-						<div class="form-horizontal col-md-4 col-md-offset-4">
-							<input type="text" class="form-control" placeholder="Enter Group Name" ng-model="newGroup.groupName" ng-blur="isExistedName()">
+						<div class="form-horizontal col-md-4 col-md-offset-4" >
+							<div class="form-group" id="newGroupNameDiv">
+								<input type="text" class="form-control" placeholder="Enter Group Name" ng-model="newGroup.groupName" ng-blur="checkExistedName()">
+								<span class="glyphicon glyphicon-remove form-control-feedback"></span>
+							</div>
+						</div>
+						<div class="col-md-4 form-group alert-danger alert-dismissible">
+							<ul>
+								<li>
+									The group name is already existed.
+								</li>
+							</ul>
+						</div>
+						<div class="form-horizontal col-md-6" style="border-right: 1px solid #cecece; height: 100%">
+							<div class="form-group">
+								<label class="col-md-3 control-label">Role Name:</label>
+								<div class="col-md-7">
+									<input type="text" class="form-control" placeholder="Enter new role name" ng-model="newRoleName">
+								</div>
+							</div>
+							<div class="form-group">
+								<button class="btn btn-primary col-md-1 col-md-offset-9" ng-click="addRoleName()">Add</button>
+							</div>
+						</div>
+						<div class="panel panel-default col-md-offset-1 col-md-5" style="padding-left: 0px; padding-right: 0px;">
+							<div class="panel-heading">
+								Added roles
+							</div>
+							<div class="panel-body">
+								<table class="table">
+									<thead>
+										<th>#</th>
+										<th>Role Name</th>
+									</thead>
+									<tbody>
+										<tr data-ng-repeat="item in newGroup.addedRoles">
+											<td>
+												<a>
+													<span class="glyphicon glyphicon-minus" ng-click="minusRole($index)"></span>
+												</a>
+											</td>
+											<td>
+												{{item.name}}
+											</td>
+
+										</tr>
+									</tbody>
+								</table>
+							</div>
 						</div>
 					</div>
 					<div style="margin-top: 20px; height: 400px; display:none" id="step3Container">
-						step3
+						<div class="col-md-2 col-md-offset-1">
+							<div class="list-group">
+								<a class="list-group-item" ng-class="{'list-group-item-success': (item.permission.length > 0),'list-group-item-warning':(item.permission.length == 0) }" ng-repeat="item in newGroup.addedRoles">
+									{{item.name}}   ({{item.permission.length}})
+								</a>
+							</div>
+						</div>
+						<div class="col-md-8">
+							
+						</div>
 					</div>
 					<div style="margin-top: 20px; height: 400px; display:none" id="step4Container">
 						step4
