--- a/public/partialviews/forgetPassword.html
+++ b/public/partialviews/forgetPassword.html
@@ -1,26 +1,42 @@
 <div class="col-md-4 col-md-offset-4">
 
-	<form class="form-horizontal" name="form" novalidate >
+	<form class="form-horizontal" name="forgotUserPasswordForm" novalidate>
 
-		<div class="form-group" ng-class="{'has-error has-feecback': form.Email.$dirty && form.Email.$invalid}">
+		<div class="form-group" ng-class="{'has-error has-feecback': forgotUserPasswordForm.Email.$dirty && forgotUserPasswordForm.Email.$invalid}">
 			<label for="email" class="col-sm-2 control-label">Email</label>
 			<div class="col-sm-10">
-				<input type="email" class="form-control" id="email" name="Email" placeholder="Enter email address" ng-model="email" required />
+				<input id="email" 
+					   type="email" 
+					   class="form-control" 
+					   name="Email" 
+					   placeholder="Enter email address" 
+					   ng-model="email" 
+					   ng-disabled="formZone.isDisable" 
+					   required />
 			</div>
 		</div>
 
 		<div class="form-group">
 			<div class="col-sm-offset-10 col-sm-2">
-				<button class="btn btn-primary btn-sm" ng-click="resetPassword()" ng-disabled="form.$invalid">Reset</button>
+				<button class="btn btn-primary btn-sm btn-float-right" 
+						ng-click="resetPassword(email)" 
+						ng-disabled="formZone.isDisable || forgotUserPasswordForm.$invalid" >
+						{{formZone.resetPasswordButton.text}}
+				</button>
 			</div>
 		</div>
 
-		<div class="form-group alert alert-danger alert-dismissible" id="errorZone" style="display: block;" ng-show="form.Email.$dirty && form.Email.$invalid">
+		<div id="errorZone"
+			 class="form-group alert alert-danger alert-dismissible" 
+			 style="display: block;" 
+			 ng-show="formZone.message != '' || (forgotUserPasswordForm.Email.$dirty && forgotUserPasswordForm.Email.$invalid)">
 			<ul>
-				<li ng-show="form.Email.$error.required">Please enter your email address.</li>
-				<li ng-show="form.Email.$error.email">This is not a valid email.</li>
+				<li ng-show="forgotUserPasswordForm.Email.$error.required">Please enter your email address.</li>
+				<li ng-show="forgotUserPasswordForm.Email.$error.email">This is not a valid email.</li>
+				<li ng-show="formZone.message != '' ">{{formZone.message}}</li>
 			</ul>
 		</div>
+		
 
 	</form>
 
