still doing the creating new group stuff

--- a/public/partialviews/permission/group.html
+++ b/public/partialviews/permission/group.html
@@ -147,7 +147,37 @@
 							</div>
 						</div>
 						<div class="col-md-8">
-							
+							<div class="panel-group" id="permissions" role="tablist" aria-multiselectable="true">
+								<div class="panel panel-default">
+									<div class="panel-heading" role="tab" id="headingOne">
+										<h4 class="panel-title">
+											<a data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+											Item #1
+											</a>
+										</h4>
+									</div>
+									<div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+										<div class="panel-body">
+											test
+										</div>
+									</div>
+								</div>
+
+								<div class="panel panel-default">
+									<div class="panel-heading" role="tab" id="headingTwo">
+										<h4 class="panel-title">
+											<a data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+											Item #2
+											</a>
+										</h4>
+									</div>
+									<div id="collapseTwo" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingTwo">
+										<div class="panel-body">
+											test
+										</div>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 					<div style="margin-top: 20px; height: 400px; display:none" id="step4Container">
