--- a/public/partialviews/permission/group.html
+++ b/public/partialviews/permission/group.html
@@ -141,39 +141,29 @@
 					<div style="margin-top: 20px; height: 400px; display:none" id="step3Container">
 						<div class="col-md-2 col-md-offset-1">
 							<div class="list-group">
-								<a class="list-group-item" ng-class="{'list-group-item-success': (item.permission.length > 0),'list-group-item-warning':(item.permission.length == 0) }" ng-repeat="item in newGroup.addedRoles">
-									{{item.name}}   ({{item.permission.length}})
+								<a class="list-group-item" ng-class="{'list-group-item-success': (item.selectedCount > 0),'list-group-item-warning':(item.selectedCount == 0),'active':item.edit }" ng-repeat="item in newGroup.addedRoles" ng-click="showRolePermission($index)">
+									<span class="badge">{{item.selectedCount}}</span>{{item.name}}
 								</a>
 							</div>
 						</div>
-						<div class="col-md-8">
+						<div class="col-md-9">
 							<div class="panel-group" id="permissions" role="tablist" aria-multiselectable="true">
-								<div class="panel panel-default">
-									<div class="panel-heading" role="tab" id="headingOne">
+								<div class="panel panel-default" ng-repeat="item in permissionInfo.displayedPermission">
+									<div class="panel-heading" role="tab" id="cate_{{item.categoryId}}">
 										<h4 class="panel-title">
-											<a data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-											Item #1
+											<a data-toggle="collapse" data-target="#cate_collapse{{item.categoryId}}" aria-expanded="true" aria-controls="cate_collapse{{item.categoryId}}">
+												{{item.categoryName}}
 											</a>
 										</h4>
 									</div>
-									<div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+									<div id="cate_collapse{{item.categoryId}}" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="cate_{{item.categoryId}}">
 										<div class="panel-body">
-											test
-										</div>
-									</div>
-								</div>
-
-								<div class="panel panel-default">
-									<div class="panel-heading" role="tab" id="headingTwo">
-										<h4 class="panel-title">
-											<a data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
-											Item #2
-											</a>
-										</h4>
-									</div>
-									<div id="collapseTwo" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingTwo">
-										<div class="panel-body">
-											test
+											<div class="checkbox col-md-4" ng-repeat="permission in item.permissions">
+												<label>
+													<input type="checkbox" ng-model="permission.checked" ng-disabled="permission.disabled" ng-change="changedPermissionCount(permission.checked)" >
+													{{permission.name}}
+												</label>
+											</div>
 										</div>
 									</div>
 								</div>
