change permission view to directive

--- a/public/partialviews/permission/group.html
+++ b/public/partialviews/permission/group.html
@@ -147,7 +147,8 @@
 							</div>
 						</div>
 						<div class="col-md-9">
-							<div class="panel-group" id="permissions" role="tablist" aria-multiselectable="true">
+							<div permission-area categoriedpermissions="permissionInfo.displayedPermission"></div>
+							<!-- <div class="panel-group" id="permissions" role="tablist" aria-multiselectable="true">
 								<div class="panel panel-default" ng-repeat="item in permissionInfo.displayedPermission">
 									<div class="panel-heading" role="tab" id="cate_{{item.categoryId}}">
 										<h4 class="panel-title">
@@ -167,7 +168,7 @@
 										</div>
 									</div>
 								</div>
-							</div>
+							</div> -->
 						</div>
 					</div>
 					<div style="margin-top: 20px; height: 400px; display:none" id="step4Container">
