permission directive ing

--- a/public/partialviews/permission/group.html
+++ b/public/partialviews/permission/group.html
@@ -147,7 +147,7 @@
 							</div>
 						</div>
 						<div class="col-md-9">
-							<div permission-area categoriedpermissions="permissionInfo.displayedPermission"></div>
+							<div permission-area categoriedpermissions="permissionInfo.displayedPermission" selectedcountchange="changedPermissionCount(permission.checked)"></div>
 						</div>
 					</div>
 					<div style="margin-top: 20px; height: 400px; display:none" id="step4Container">
