complete the directive of permission

--- a/public/partialviews/permission/group.html
+++ b/public/partialviews/permission/group.html
@@ -147,7 +147,7 @@
 							</div>
 						</div>
 						<div class="col-md-9">
-							<div permission-area categoriedpermissions="permissionInfo.displayedPermission" selectedcountchange="changedPermissionCount(permission.checked)"></div>
+							<div permission-area categoriedpermissions="permissionInfo.displayedPermission" selectedcountchange="changedPermissionCount(checked)"></div>
 						</div>
 					</div>
 
