--- a/public/partialviews/permission/modifyPermission.html
+++ b/public/partialviews/permission/modifyPermission.html
@@ -16,7 +16,7 @@
 							<div class="col-md-6">
 								<input type="text" class="form-control" ng-model="newCategoryName">
 							</div>
-							<button class="btn btn-primary btn-lg" ng-click="AddCategory()">Add</button>
+							<button class="btn btn-primary btn-lg" ng-click="AddCategory();">Add</button>
 						</div>
 					</div>
 				</div>
