finish add category validate

--- a/public/partialviews/forceResetPassword.html
+++ b/public/partialviews/forceResetPassword.html
@@ -5,7 +5,7 @@
 		  novalidate>
 
 		<div class="form-group" 
-			 ng-class="{'has-error has-feecback': (forceResetUserPasswordForm.NewPassword.$dirty && forceResetUserPasswordForm.NewPassword.$invalid)
+			 ng-class="{'has-error has-feedback': (forceResetUserPasswordForm.NewPassword.$dirty && forceResetUserPasswordForm.NewPassword.$invalid)
 			 || (forceResetUserPasswordForm.ConfirmPassword.$modelValue != forceResetUserPasswordForm.NewPassword.$modelValue)}">
 			<label class="col-sm-4 control-label" for="newPassword" >
 		    New Password
@@ -23,7 +23,7 @@
 		</div>
 
 		<div class="form-group" 
-			 ng-class="{'has-error has-feecback': (forceResetUserPasswordForm.ConfirmPassword.$dirty && forceResetUserPasswordForm.ConfirmPassword.$invalid)
+			 ng-class="{'has-error has-feedback': (forceResetUserPasswordForm.ConfirmPassword.$dirty && forceResetUserPasswordForm.ConfirmPassword.$invalid)
 			 || (forceResetUserPasswordForm.ConfirmPassword.$modelValue != forceResetUserPasswordForm.NewPassword.$modelValue)}">
 			<label class="col-sm-4 control-label" for="confirmPassword">
 		   Confirm Password
