--- a/public/partialviews/forgetPassword.html
+++ b/public/partialviews/forgetPassword.html
@@ -2,7 +2,7 @@
 
 	<form class="form-horizontal" name="forgotUserPasswordForm" novalidate>
 
-		<div class="form-group" ng-class="{'has-error has-feecback': forgotUserPasswordForm.Email.$dirty && forgotUserPasswordForm.Email.$invalid}">
+		<div class="form-group" ng-class="{'has-error has-feedback': forgotUserPasswordForm.Email.$dirty && forgotUserPasswordForm.Email.$invalid}">
 			<label for="email" class="col-sm-2 control-label">Email</label>
 			<div class="col-sm-10">
 				<input id="email" 
