--- a/public/partialviews/permission/modifyPermission.html
+++ b/public/partialviews/permission/modifyPermission.html
@@ -14,25 +14,36 @@
 						<div class="form-horizontal">
 							<div class="form-group" ng-class="{'has-error has-feedback': addCategory.$dirty && addCategory.$invalid}">
 								<label class="col-md-2 control-label" for="newCategoryName">Category Name</label>
-								<div class="col-md-6">
+								<div class="col-md-4">
 									<input type="text" 
 										   id="newCategoryName" 
 										   class="form-control" 
 										   placeholder="Enter category name"
 										   name="newCategoryName"
-										   ng-model="newCategoryName"
-										   required >
+										   ng-model="CategoryName"
+										   required />
 								</div>
-								<button class="btn btn-primary" 
-										ng-click="AddCategory();" 
-										ng-disabled="addCategory.$invalid">
-								Add
-								</button>
-								<!-- <p>
-									<pre>
-									{{addCategory | json}}
-									</pre>
-								</p> -->
+								<div class="col-md-6" ng-show="formStyle.addCategory.feedbackMessage != ''" >
+									<label class="control-label text-danger">{{formStyle.addCategory.feedbackMessage}}</label>
+								</div>
+							</div>
+							<div class="form-group">
+								<label class="col-md-2 control-label" for="newCategoryDescription">Description</label>
+								<div class="col-md-4">
+									<input type="text" 
+										   id="newCategoryDescription" 
+										   class="form-control" 
+										   placeholder="Enter description"
+										   name="newCategoryDescription"
+										   ng-model="CategoryDescription" />
+								</div>
+								<div class="col-md-6">
+									<button class="btn btn-primary" 
+											ng-click="AddCategory();" 
+											ng-disabled="addCategory.$invalid">
+									{{formStyle.addCategory.submitButtonText}}
+									</button>
+								</div>
 							</div>
 						</div>
 					</div>
