--- a/public/partialviews/permission/modifyPermission.html
+++ b/public/partialviews/permission/modifyPermission.html
@@ -71,7 +71,7 @@
 								<select class="form-control" 
 										ng-model="selectPermissionCategory" 
 										ng-options="category.name for category in permissionCategories"
-										ng-change="changeSelectPermissionCategory()">
+										ng-change="changeSelectPermissionCategory();">
 									<option value="">-- choose category --</option>
 								</select>
 							</div>
@@ -87,13 +87,35 @@
 										</tr>
 									</thead>
 									<tbody>
-										<tr ng-show="searchPermission.length <= 0">
+										<!-- <tr ng-show="searchPermission.length <= 0">
 											<td colspan="3">No records...</td>
 										</tr>
 										<tr data-ng-repeat="permission in searchPermission">
 											<td>{{permission.name}}</td>
 											<td>{{permission.description}}</td>
-											<td><a href="javascript:void(0);" ng-click="modifyPermission(permission);">modify</a></td>
+											<td>
+												<a href=""
+												   data-toggle="modal" 
+												   data-target="#myModal"
+												   ng-click="permissionAction('edit', permission);" >
+											    edit
+											    </a>
+											</td>
+										</tr> -->
+										<!-- <tr ng-show="searchPermission.length <= 0">
+											<td colspan="3">No records...</td>
+										</tr> -->
+										<tr data-ng-repeat="permission in permissions | testFilter:selectPermissionCategory.id ">
+											<td>{{permission.name}}</td>
+											<td>{{permission.description}}</td>
+											<td>
+												<a href=""
+												   data-toggle="modal" 
+												   data-target="#myModal"
+												   ng-click="permissionAction('edit', permission);" >
+											    edit
+											    </a>
+											</td>
 										</tr>
 									</tbody>
 								</table>
@@ -104,4 +126,48 @@
 			</div>
 		</div>
 	</div>
+</div>
+
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <h4 class="modal-title" id="myModalLabel">{{permissionAction.title}}</h4>
+      </div>
+      <div class="modal-body">
+      		<form role="form">
+	        	<div class="form-group">
+	        		<label for="actionPermissionName">Name</label>
+	        		<input class="form-control" 
+        				   type="text" 
+        				   id="actionPermissionName" 
+        				   ng-model="permissionAction.permissionModel.name" />
+	        	</div>
+	        	<div class="form-group">
+	        		<label for="actionPermissionDescription">Description</label>
+        			<input class="form-control" 
+        				   type="text" 
+        				   id="actionPermissionDescription" 
+        				   ng-model="permissionAction.permissionModel.description" />
+	        	</div>
+	        	<div class="form-group">
+	        		<label for="actionPermissionCategory">Category</label>
+        			<select class="form-control" 
+        					id="actionPermissionCategory"
+							ng-model="permissionAction.permissionModel.categoryId" 
+							ng-options="category.id as category.name for category in permissionCategories">
+							<option value="">-- choose category --</option>
+					</select>
+	        	</div>
+        	</form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
 </div>
