--- a/public/partialviews/permission/modifyPermission.html
+++ b/public/partialviews/permission/modifyPermission.html
@@ -74,12 +74,21 @@
 									<option value="">-- choose category --</option>
 								</select>
 							</div>
+							<div class="col-md-offset-7 col-md-2">
+								<button class="btn btn-primary" 
+										data-toggle="modal" 
+										data-target="#myModal"
+										ng-click="permissionAction('add');" >
+										Add
+								</button>
+							</div>
 						</div>
 						<div class="form-group">
 							<div class="col-md-6">
 								<table class="table table-condensed" >
 									<thead>
 										<tr>
+											<th>Permission Id</th>
 											<th>Permission Name</th>
 											<th>Description</th>
 											<th></th>
@@ -87,16 +96,14 @@
 									</thead>
 									<tbody>
 										<tr ng-show="searchPermission.length <= 0">
-											<td colspan="3">No records...</td>
+											<td colspan="4">No records...</td>
 										</tr>
 										<tr data-ng-repeat="permission in permissions | filterPermissionById:selectPermissionCategory.id | orderBy:'id' as searchPermission">
+											<td>{{permission.id}}</td>
 											<td>{{permission.name}}</td>
 											<td>{{permission.description}}</td>
 											<td>
-												<a href=""
-												   data-toggle="modal" 
-												   data-target="#myModal"
-												   ng-click="permissionAction('edit', permission);" >
+												<a style="cursor:pointer" ng-click="permissionAction('edit', permission);" >
 											    edit
 											    </a>
 											</td>
@@ -119,7 +126,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-        <h4 class="modal-title" id="myModalLabel">{{permissionAction.title}}</h4>
+        <h4 class="modal-title" id="myModalLabel">{{formStyle.permission.title}}</h4>
       </div>
       <div class="modal-body">
       		<form name="permissionForm" role="form" novalidate>
@@ -130,7 +137,7 @@
         				   id="actionPermissionName" 
         				   name="permissionName"
         				   placeholder="Enter permission name"
-        				   ng-model="permissionAction.permissionModel.name"
+        				   ng-model="formStyle.permission.permissionModel.name"
         				   required />
 	        	</div>
 	        	<div class="form-group">
@@ -140,30 +147,44 @@
         				   id="actionPermissionDescription" 
         				   name="permissionDescription"
         				   placeholder="Enter description"
-        				   ng-model="permissionAction.permissionModel.description" />
+        				   ng-model="formStyle.permission.permissionModel.description" />
 	        	</div>
 	        	<div class="form-group">
 	        		<label for="actionPermissionCategory">Category</label>
         			<select class="form-control" 
         					id="actionPermissionCategory"
         					name="permissionCategoryId"
-							ng-model="permissionAction.permissionModel.categoryId" 
+							ng-model="formStyle.permission.permissionModel.categoryId" 
 							ng-options="category.id as category.name for category in permissionCategories">
 							<option value="">-- choose category --</option>
 					</select>
 	        	</div>
 	        	<div class="form-group alert alert-danger alert-dismissible" 
-	        		 ng-show="!permissionForm.permissionCategoryId.$modelValue || (permissionForm.$dirty && permissionForm.$invalid)" >
+	        		 ng-show="(permissionForm.$dirty && permissionForm.$invalid) 
+	        		 || (!permissionForm.permissionCategoryId.$modelValue && permissionForm.$dirty)" >
 	        		<ul>
 	        			<li ng-show="permissionForm.permissionName.$error.required">please enter permission name</li>
 	        			<li ng-show="!permissionForm.permissionCategoryId.$modelValue">please select a permission category</li>
+	        		</ul>
+	        	</div>
+	        	<!-- ng-class="{'has-error has-feedback': addCategory.$dirty && addCategory.$invalid}" -->
+	        	<!-- class="form-group alert alert-danger alert-dismissible" -->
+	        	<div ng-class="{'form-group alert alert-dismissible':true,'alert-danger':!formStyle.permission.feedbackResult,'alert-success':formStyle.permission.feedbackResult}"
+	        		 ng-show="formStyle.permission.feedbackMessage">
+	        		<ul>
+	        			<li>{{formStyle.permission.feedbackMessage}}</li>
 	        		</ul>
 	        	</div>
         	</form>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary" ng-click="permissionActionSubmit();">{{permissionAction.buttonText}}</button>
+        <button type="button" 
+        		class="btn btn-primary" 
+        		ng-click="permissionActionSubmit();"
+        		ng-disabled="formStyle.permission.isSubmitting || !permissionForm.permissionCategoryId.$modelValue || (permissionForm.$dirty && permissionForm.$invalid)" >
+        		{{formStyle.permission.submitButtonText}}
+		</button>
       </div>
     </div>
   </div>
