force dispatch function is ok
select all then force dispatch, back to the main grid, the select
all checkbox is checked, this will be fixed at the end.

--- a/public/partialviews/so/main.html
+++ b/public/partialviews/so/main.html
@@ -285,7 +285,7 @@
 			</div>
 			<div class="modal-footer row">
 				<button class="btn btn-primary col-md-offset-9 col-md-1" data-dismiss="modal">Cancel</button>
-				<button class="btn btn-primary col-md-1">Dispatch</button>
+				<button class="btn btn-primary col-md-1" ng-click="forceDispatch()">Dispatch</button>
 			</div>
 		</div>
 	</div>
