--- a/public/partialviews/so/main.html
+++ b/public/partialviews/so/main.html
@@ -25,7 +25,7 @@
 				</select>
 			</div>
 			<div class="col-md-12 margin-botton-div">
-				<select class="form-control" ng-model="filters.Executee" ng-options="item for item in analyseResult.Executee">
+				<select class="form-control" ng-model="filters.ExecuteeName" ng-options="item for item in analyseResult.ExecuteeName">
 					<option value="">---Executee---</option>
 				</select>
 			</div>
@@ -329,7 +329,7 @@
 			</div>
 			<div class="modal-footer">
 				<button class="btn btn-primary col-md-offset-9 col-md-1" data-dismiss="modal">Cancel</button>
-				<button class="btn btn-primary col-md-1" ng-click="forceAssign()">Dispatch</button>
+				<button class="btn btn-primary col-md-1" ng-click="forceAssign()">Assign</button>
 			</div>
 		</div>
 	</div>
