--- a/public/partialviews/so/main.html
+++ b/public/partialviews/so/main.html
@@ -92,169 +92,103 @@
 			<button class="btn btn-primary">Add workflow</button>
 		</div>
 		<!-- <div class="well"> -->
-		<div class="well">
-			<div class="row">
-				<div class="col-md-2">
-					<label>BKG Number: </label>
+		<div>
+			<ul class="nav nav-tabs" role="tablist" id="detailTab">
+				<li role="presentation" class="active">
+					<a data-target="#baseInfo" role="tab" style="cursor: pointer" data-toggle="tab">Base Info</a>
+				</li>
+				<li role="presentation">
+					<a data-target="#workflow" role="tab" style="cursor: pointer" data-toggle="tab">Work Flow</a>
+				</li>
+			</ul>
+			<div class="tab-content">
+				<div role="tabpanel" class="tab-pane active" id="baseInfo">
+					<div class="well">
+						<div class="row">
+							<div class="col-md-2">
+								<label>SO Type: </label>
+							</div>
+							<div class="col-md-2">
+								<label>{{currentSORequest.baseInfo.SOType}}</label>
+							</div>
+							<div class="col-md-2">
+								<label>Sender: </label>
+							</div>
+							<div class="col-md-2">
+								<label>{{currentSORequest.baseInfo.Sender}}</label>
+							</div>
+							<div class="col-md-2">
+								<label>Received Time: </label>
+							</div>
+							<div class="col-md-2">
+								<label>{{currentSORequest.baseInfo.ReceivedTime}}</label>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-2">
+								<label>Service: </label>
+							</div>
+							<div class="col-md-2">
+								<label>{{currentSORequest.baseInfo.Service}}</label>
+							</div>
+							<div class="col-md-2">
+								<label>POR: </label>
+							</div>
+							<div class="col-md-2">
+								<label>{{currentSORequest.baseInfo.POR}}</label>
+							</div>
+							<div class="col-md-2">
+								<label>POL: </label>
+							</div>
+							<div class="col-md-2">
+								<label>{{currentSORequest.baseInfo.POL}}</label>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-2">
+								<label>Request Time: </label>
+							</div>
+							<div class="col-md-2">
+								<label>{{currentSORequest.baseInfo.RequestTime}}</label>
+							</div>
+							<div class="col-md-2">
+								<label>Is PreAssign: </label>
+							</div>
+							<div class="col-md-2">
+								<label>{{currentSORequest.baseInfo.IsPreAssignedBK}}</label>
+							</div>
+						</div>
+					</div>
 				</div>
-				<div class="col-md-4">
-					<label>181XXXXXXXXXXXXXX</label>
-				</div>
-				<div class="col-md-2">
-					<label>MBL Number: </label>
-				</div>
-				<div class="col-md-4">
-					<label>XXXXXXXXXXXXXXXXX</label>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-2">
-					<label>Trade: </label>
-				</div>
-				<div class="col-md-4">
-					<label>XXXXXXXXXXXX</label>
-				</div>
-				<div class="col-md-2">
-					<label>Service: </label>
-				</div>
-				<div class="col-md-4">
-					<label>XXXXXXXXXXXX</label>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-2">
-					<label>Vessel: </label>
-				</div>
-				<div class="col-md-4">
-					<label>XXXXXXXXXXXX</label>
-				</div>
-				<div class="col-md-2">
-					<label>Voyage: </label>
-				</div>
-				<div class="col-md-4">
-					<label>XXXXXXXXXXXX</label>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-2">
-					<label>DTX Deadline: </label>
-				</div>
-				<div class="col-md-4">
-					<label>XXXXXXXXXXXX</label>
-				</div>
-				<div class="col-md-2">
-					<label>POR Group: </label>
-				</div>
-				<div class="col-md-4">
-					<label>XXXXXXXXXXXX</label>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-2">
-					<label>POL: </label>
-				</div>
-				<div class="col-md-4">
-					<label>XXXXXXXXXXXX</label>
-				</div>
-				<div class="col-md-2">
-					<label>POD: </label>
-				</div>
-				<div class="col-md-4">
-					<label>XXXXXXXXXXXX</label>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-2">
-					<label>Final Destination: </label>
-				</div>
-				<div class="col-md-4">
-					<label>XXXXXXXXXXXX</label>
-				</div>
-				<div class="col-md-2">
-					<label>Booking shipper: </label>
-				</div>
-				<div class="col-md-4">
-					<label>XXXXXXXXXXXX</label>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-2">
-					<label>Contract Holder: </label>
-				</div>
-				<div class="col-md-4">
-					<label>XXXXXXXXXXXX</label>
-				</div>
-				<div class="col-md-2">
-					<label>Ref Number: </label>
-				</div>
-				<div class="col-md-4">
-					<label>XXXXXXXXXXXX</label>
+				<div role="tabpanel" class="tab-pane" id="workflow">
+					<div class="well">
+						<table class="table table-hover">
+							<thead>
+								<th>Time</th>
+								<th>Executor</th>
+								<th>Executee</th>
+								<th>Status</th>
+								<th>Is Update</th>
+								<th>Update User</th>
+								<th>Remark</th>
+								<th>Attachment</th>
+							</thead>
+							<tbody>
+							<tr ng-repeat="item in currentSORequest.workflow | orderBy:'-OperateTime'">
+									<td>{{item.OperateTime}}</td>
+									<td>{{item.Executor}}</td>
+									<td>{{item.Executee}}</td>
+									<td>{{item.Status}}</td>
+									<td>{{item.IsUpdateInCurrentStatus}}</td>
+									<td>{{item.Updater}}</td>
+									<td>{{item.Remark}}</td>
+									<td><a href="{{item.AttachmentPath}}">{{item.AttachmentName}}</a></td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-md-2">
-					<label>Indexer: </label>
-				</div>
-				<div class="col-md-4">
-					<label>XXXXXXXXXXXX</label>
-				</div>
-			</div>
-		</div>
-		<div class="well">
-			<table class="table table-hover">
-				<thead>
-					<th>Task</th>
-					<th>Operator</th>
-					<th>to</th>
-					<th>Time</th>
-					<th>Remarks</th>
-				</thead>
-				<tbody>
-					<tr>
-						<td>indexing</td>
-						<td>System</td>
-						<td>Wuhan Team</td>
-						<td>2014-01-12 15:59</td>
-						<td></td>
-					</tr>
-					<tr>
-						<td>Coordination</td>
-						<td>Jason</td>
-						<td>Jason</td>
-						<td>2014-01-12 15:59</td>
-						<td></td>
-					</tr>
-					<tr>
-						<td>Finished</td>
-						<td>Jason</td>
-						<td></td>
-						<td>2014-01-12 15:59</td>
-						<td>WTF</td>
-					</tr>
-				</tbody>
-			</table>
-		</div>
-		<div class="well">
-			<table class="table table-hover">
-				<thead>
-					<th>Subject</th>
-					<th>Received Time</th>
-				</thead>
-				<tbody>
-					<tr>
-						<td><a>third</a></td>
-						<td>2014-01-12 17:59</td>
-					</tr>
-					<tr>
-						<td><a>second</a></td>
-						<td>2014-01-12 16:59</td>
-					</tr>
-					<tr>
-						<td><a>first</a></td>
-						<td>2014-01-12 15:59</td>
-					</tr>
-				</tbody>
-			</table>
 		</div>
 		<!-- </div> -->
 	</div>
@@ -304,14 +238,6 @@
 				<h5>
 					Assign to :
 				</h5>
-				<!-- <div class="row">
-					<div class="checkbox col-md-4" ng-repeat="item in canDispatchedGroup">
-						<label>
-							<input type="checkbox" ng-model="item.checked" />
-							{{item.name}}<span class="badge">{{item.assignedCount}}</span>
-						</label>
-					</div>
-				</div> -->
 				<div class="panel panel-primary" ng-repeat="item in canAssignUser">
 					<div class="panel-heading">
 						<h4 class="panel-title">{{item.groupName}}</h4>
