--- a/public/partialviews/so/main.html
+++ b/public/partialviews/so/main.html
@@ -2,10 +2,10 @@
 	<div data-ng-class="{'col-md-2':listDivClass,'':detailDivClass}" ng-show="listDivClass">
 		<div class="row margin-botton-div" ng-show="hasSelectedSO">
 			<div class="col-md-12 margin-botton-div">
-				<button class="btn btn-primary" ng-click="dispatchGroup()" >Dispatch to Group</button>
+				<button class="btn btn-primary" ng-click="openDispatchGroupDialog()" >Dispatch to Group</button>
 			</div>
 			<div class="col-md-12 margin-botton-div" >
-				<button class="btn btn-primary" ng-click="assignUser()">Assign to inputter</button>
+				<button class="btn btn-primary" ng-click="openAssignUserDialog()">Assign to inputter</button>
 			</div>
 		</div>
 		<div class="row margin-botton-div">
@@ -89,7 +89,8 @@
 	<div ng-class="{'col-md-10 col-md-offset-2':detailDivClass,'':listDivClass}" id="detailDiv" ng-show="detailDivClass">
 		<div class="row margin-botton-div">
 			<button class="btn btn-primary" ng-click="bakcToList();">Back to list</button>
-			<button class="btn btn-primary">Add workflow</button>
+			<button class="btn btn-primary" ng-click="openWorkFlowDialog();">Add workflow</button>
+			<!-- data-toggle="modal" data-target="#workflowDialog" -->
 		</div>
 		<!-- <div class="well"> -->
 		<div>
@@ -159,6 +160,32 @@
 							</div>
 						</div>
 					</div>
+					<div class="well" ng-hide="currentSORequest.bookings == null ||currentSORequest.bookings.length == 0">
+						<table class="table table-hover">
+							<thead>
+								<th>BookingNo</th>
+								<th>Status</th>
+								<th>InttraNo</th>
+								<th>Container Count</th>
+								<th>Total TEU</th>
+								<th>Is Copay Booking</th>
+								<th>Booking Confirmation Time</th>
+								<th>Finished User</th>
+							</thead>
+							<tbody>
+								<tr ng-repeat="item in currentSORequest.bookings | orderBy:''-BookingConfirmationTime">
+									<td>{{item.BookingNumber}}</td>
+									<td>{{item.Status}}</td>
+									<td>{{item.InttraNo}}</td>
+									<td>{{item.ContainerCount}}</td>
+									<td>{{item.TotalTEU}}</td>
+									<td>{{item.IsCopyBooking}}</td>
+									<td>{{item.BookingConfirmationTime}}</td>
+									<td>{{item.FinishedUser}}</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
 				</div>
 				<div role="tabpanel" class="tab-pane" id="workflow">
 					<div class="well">
@@ -174,7 +201,7 @@
 								<th>Attachment</th>
 							</thead>
 							<tbody>
-							<tr ng-repeat="item in currentSORequest.workflow | orderBy:'-OperateTime'">
+								<tr ng-repeat="item in currentSORequest.workflow | orderBy:'-OperateTime'">
 									<td>{{item.OperateTime}}</td>
 									<td>{{item.Executor}}</td>
 									<td>{{item.Executee}}</td>
@@ -193,7 +220,7 @@
 		<!-- </div> -->
 	</div>
 </div>
-<div class="modal fade" role="dialog" id="dispatchDialog" aria-labelledby="dispatchTitle" aria-hidden="true">
+<div class="modal fade" role="dialog" id="dispatchDialog" aria-labelledby="dispatchTitle" aria-hidden="true" data-backdrop="false">
 	<div class="modal-dialog modal-lg">
 		<div class="modal-content">
 			<div class="modal-header">
@@ -225,7 +252,7 @@
 	</div>
 </div>
 
-<div class="modal fade" role="dialog" id="assignDialog" aria-labelledby="assignTitle" aria-hidden="true">
+<div class="modal fade" role="dialog" id="assignDialog" aria-labelledby="assignTitle" aria-hidden="true" data-backdrop="false">
 	<div class="modal-dialog modal-lg">
 		<div class="modal-content">
 			<div class="modal-header">
@@ -256,6 +283,98 @@
 			<div class="modal-footer">
 				<button class="btn btn-primary col-md-offset-9 col-md-1" data-dismiss="modal">Cancel</button>
 				<button class="btn btn-primary col-md-1" ng-click="forceAssign()">Assign</button>
+			</div>
+		</div>
+	</div>
+</div>
+<div class="modal fade" role="dialog" id="workflowDialog" aria-labelledby="workflowTitle" aria-hidden="true" data-backdrop="false">
+	<div class="modal-dialog modal-lg">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h4 class="modal-title" id="workflowTitle">
+					Work Flow
+				</h4>
+			</div>
+			<div class="modal-body">
+				<div class="form-horizontal">
+					<div class="form-group">
+						<label class="form-label col-md-2 col-md-offset-1" style="padding-top:7px;">
+							Workflow Type:
+						</label>
+						<div class="col-md-3">
+							<select class="form-control" ng-model="newWorkFlow.type" ng-options="item.name for item in workFlowBaseInfo.types"></select>
+						</div>
+					</div>
+					<div>
+						<div class="form-group">
+							<label class="form-label col-md-2 col-md-offset-1" style="padding-top:7px;">
+								To:
+							</label>
+							<div class="col-md-3">
+								<select class="form-control" ng-model="newWorkFlow.Job" data-ng-options="item.name for item in workFlowBaseInfo.assignedUsers">
+								</select>
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="form-label col-md-2 col-md-offset-1">
+								Remark:
+							</label>
+							<div class="col-md-8">
+								<textarea class="form-control" rows="3" ng-model="newWorkFlow.remark"></textarea>
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="form-label col-md-2 col-md-offset-1" >
+								Attachment:
+							</label>
+							<div class="col-md-8">
+								<input type="file" class="form-control" ng-file-select ng-model="uploader.attachment" ng-file-change="selectFileChanged()"></input>
+							</div>
+						</div>
+						<div class="form-group">
+							<div class="col-md-10 col-md-offset-1">
+								<div class="progress">
+									<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="uploader.progress" aria-valuemin="0" aria-valuemax="100" ng-style="{'width':uploader.progressbar + '%'}">
+										{{uploader.percentage}}
+									</div>
+								</div>
+							</div>
+						</div>
+						
+					</div>
+					<!-- <div ng-show="newWorkFlow.type.id == 5">
+						<div class="form-group">
+							<div class="input-group col-md-6 col-md-offset-2">
+								<span class="input-group-addon">Change Inputter </span>
+								<select class="form-control" ng-model="newWorkFlow.unassignJob" data-ng-options="item.name for item in workFlowBaseInfo.assignedUsers">
+									<option>---Select User---</option>
+								</select>
+								<span class="input-group-btn">
+									<button class="btn btn-primary"> To</button>
+								</span>
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="form-label col-md-1 col-md-offset-2">OR</label>
+						</div>
+						<div class="form-group ">
+							<button class="btn btn-primary col-md-2 col-md-offset-2" ng-click="addMoreInputter()">Add new Inputter</button>
+						</div>
+						<div class="form-group ">
+							<button class="btn btn-primary col-md-2 col-md-offset-9" data-dismiss="modal">Close</button>
+						</div>
+					</div> -->
+				</div>
+			</div>
+			<div class="modal-footer">
+				<div class="form-horizontal">
+					<div class="form-group">
+						<div class="col-md-4 col-md-offset-7">
+							<button class="btn btn-primary " style="float:right" data-dismiss="modal">Cancel</button>
+							<button class="btn btn-primary " style="float:right; margin-right:5px;" ng-click="addWorkFlow()">Save</button>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
