--- a/public/partialviews/permission/group.html
+++ b/public/partialviews/permission/group.html
@@ -164,23 +164,23 @@
 						<div class="col-md-5" style="float:left;">
 							<div class="form-inline" >
 								<div class="form-group">
-									<select class="form-control" ng-model="selectedOffice" ng-options="office.name for office in company.offices">
+									<select class="form-control" ng-model="selectedOffice" ng-options="office.name for office in company.offices" ng-disabled="isSubmitting">
 										<option value="">---Offices---</option>
 									</select>
 								</div>
 								<div class="form-group">
-									<select class="form-control" ng-model="selectedDept" ng-options="dept.name for dept in company.depts">
+									<select class="form-control" ng-model="selectedDept" ng-options="dept.name for dept in company.depts" ng-disabled="isSubmitting">
 										<option value="">---Departments---</option>
 									</select>
 								</div>
 								<div class="form-group">
-									<button class="btn btn-primary btn-sm" ng-click="searchUserByOfficeAndDepartment(selectedOffice, selectedDept);" >
+									<button class="btn btn-primary btn-sm" ng-click="searchUserByOfficeAndDepartment(selectedOffice, selectedDept);" ng-disabled="isSubmitting">
 									Search
 									</button>
 								</div>
 							</div>
 							<div style="overflow-y:auto; height: 100%; width: 100%;">
-								<table class="table table-condensed" style="font-size: x-small;">
+								<table class="table table-condensed" style="font-size: x-small;" >
 									<thead>
 										<tr>
 											<th>Full Name</th>
@@ -188,6 +188,9 @@
 										</tr>
 									</thead>
 									<tbody>
+										<tr ng-show="step4SearchUsers.length <= 0">
+											<td colspan="3">No records...</td>
+										</tr>
 										<tr data-ng-repeat="searchUser in step4SearchUsers">
 											<td>{{searchUser.fullName}}</td>
 											<td>
@@ -204,7 +207,7 @@
 						
 						<div class="col-md-7">
 							<div class="form-inline">
-								<table class="table table-condensed" >
+								<table class="table table-condensed">
 									<thead>
 										<tr>
 											<th>#</th>
@@ -221,7 +224,7 @@
 											</td>
 											<td>{{user.fullName}}</td>
 											<td>
-												<ui-select multiple ng-model="user.roles" theme="bootstrap" ng-disbaled="disabled" close-on-select="false" style="width:400px; ">
+												<ui-select multiple ng-model="user.roles" theme="bootstrap" ng-disabled="isSubmitting" close-on-select="false" style="width:400px; ">
 													<ui-select-match placeholder="Select roles...">{{$item.name}}</ui-select-match>
 													<ui-select-choices repeat="role.name as role in newGroup.addedRoles | filter:$select.search">
 													{{role.name}}
@@ -234,11 +237,12 @@
 							</div>
 						</div>
 					</div>
-			<div>
-				<button class="btn btn-primary col-md-1 col-md-offset-9" ng-click="pre();" id="preBtn">pre step</button>
-				<button class="btn btn-primary col-md-1 col-md-offset-1" ng-click="next();" id="nextBtn">next step</button>
-			</div>
-<div class="form-group">
+					<div>
+						<button class="btn btn-primary col-md-1 col-md-offset-9" ng-click="pre();" id="preBtn" ng-disabled="isSubmitting">pre step</button>
+						<button class="btn btn-primary col-md-1 col-md-offset-1" ng-click="next();" id="nextBtn" ng-disabled="isSubmitting">next step</button>
+					</div>
+
+<!-- <div class="form-group">
 <p>
 <pre>
 {{submitGroup | json}}
@@ -246,7 +250,7 @@
 {{newGroup | json}}
 </pre>
 </p>
-</div>
+</div> -->
 		</div>
 	</div>
 </div>
